project3: add RequestTypesCollector